--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,3 @@
 [SETTINGS]
 token = 6891110240:AAGkFyWofD7rUqWuJ0PpZj-coNdiwvN1tr4
+genres = Романтика,Детектив,Фэнтези,На реальных событиях,Приключения,Магия
